<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fl_main">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_250dp"
                android:src="@drawable/phone2"
                android:scaleType="centerCrop"
                android:id="@+id/background"/>
            <TextView
                android:id="@+id/id_collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_6_photo"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:background="@color/backdrop"
                android:padding="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:layout_marginStart="@dimen/_16dp"
                android:drawableStart="@drawable/ic_collection"
                android:drawablePadding="@dimen/_8dp"/>
        </FrameLayout>
        <TextView
            android:id="@+id/id_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_harga"
            android:textSize="30sp"
            android:layout_below="@id/fl_main"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"/>
        <TextView
            android:id="@+id/id_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_price"
            android:text="@string/txt_stock"
            android:layout_marginStart="@dimen/_16dp"
            android:textSize="@dimen/_16sp"/>
        
        <TextView
            android:id="@+id/id_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_stock"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/content_text"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/spesifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_spesifikasi"
            android:layout_below="@id/id_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"/>
        
        <TableLayout
            android:id="@+id/talemain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spesifikasi"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp">
            
            <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_display"
                android:id="@+id/text_display"
                android:layout_marginEnd="@dimen/_16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_specs_display"

                android:layout_weight="1"
                android:textColor="@android:color/black"/>
        </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_size"
                    android:id="@+id/size_lable"
                    android:layout_marginEnd="@dimen/_16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_specs_size"
                    android:layout_weight="1" 
                    android:textColor="@android:color/black"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_batery"
                    android:id="@+id/baterry_lable"
                    android:layout_marginEnd="@dimen/_16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_specs_battery"
                    android:textColor="@android:color/black"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/id_jual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_jual"
            android:layout_below="@id/talemain"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/id_jual"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:src="@drawable/fotoku"/>
        <TextView
            android:id="@+id/id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:layout_toEndOf="@+id/photo_profile"
            android:layout_below="@id/id_jual"
            android:layout_margin="@dimen/_30dp"/>
        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_order"
            android:layout_margin="@dimen/_16dp"
            android:layout_below="@+id/photo_profile"/>

    </RelativeLayout>
</ScrollView>